--- a/index.html
+++ b/index.html
@@ -23,11 +23,15 @@
                 </div>
                     <ul class="menu">
                         <li>Analisi</li>
-                        <li class="active"><a href="youtube.com">Architettura degli elaboratori</a></li>
+                        <li class="active"><a href="appuntiArchitettura.pdf">Architettura degli elaboratori</a></li>
                     </ul>
             </div>
 
             <div class="boxtesto">
+                Selezionare il corso desiderato per avviare il download degli appunti.
+            </div>
+
+            <div class="info">
                 Gli appunti sono frutto di rielaborazioni delle lezioni seguite 
                 presso il dipartimento di informatica di Torino.
             </div>
