--- a/index.html
+++ b/index.html
@@ -42,5 +42,7 @@
     </div>
 
     <script type="text/javascript" src="script.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2938847909606718"
+     crossorigin="anonymous"></script>
 </body>
 </html>
